// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PowerBlock should render correctly 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      strength
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        power-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="power_value"
      max="100"
      min="0"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test PowerBlock should render correctly whe power is low 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      strength
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        power-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        value: 
        7
      </p>
      <p>
        unit: 
        %
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="power_value"
      max="100"
      min="0"
      step="0.1"
      type="range"
      value="7"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        !
      </div>
      <div
        class="warning-text"
      >
        low_power_warning
      </div>
    </div>
  </div>
</div>
`;

exports[`test PowerBlock should render correctly when type is panel-item 1`] = `
<div>
  <div
    class="object-panel-item"
    id="power"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          87
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      strength
    </div>
  </div>
</div>
`;
